editor-components/Image_gallery/image_gallery_2/image-gallery2.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;
.container {
  .with-overlay{
    z-index: 103;
  }
    .max-content {
      display: flex;
      flex-direction: column;
      justify-content: center;
      gap: var(--composer-gap-lg);
      width: 100%;
        .tab-container {
          display: flex;
          gap: var(--composer-gap-xl);
          flex-wrap: wrap;
          width: 100%;
          .tab {
            display: flex;
            color: var(--composer-font-color-primary);
            cursor: pointer;
            transition: color 0.3s ease;
            width: fit-content;
            margin: 0;
            &:hover,
            &.active-tab {
              text-decoration: underline;
              text-underline-offset: var(--composer-gap-xs);
              opacity: 1;
            }
          }
        }
        .gallery-container {
          transition: transform 1s ease;
          .gallery-item {
            cursor: pointer;
            overflow: hidden;
            transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
            opacity: 1;
            border-radius: var(--composer-border-radius-md);
            .image-container {
              width: 100%;
              position: relative;
              display: flex;
              align-items: center;
              .image {
                width: 100%;
                height: 100%;
                object-fit: cover;
              }
  
              .overlay {
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                background-color: var(--composer-overlay-color);
                opacity: 0;
                transition: opacity 0.5s ease;
                pointer-events: none;
              }
              .icon-wrapper{
                background-color: var(--composer-font-color-primary);
                border-radius: 50%;
                padding: var(--composer-gap-sm);
                position: absolute;
                top: 60%;
                left: 50%;
                transform: translate(-50%, -50%) scale(2);
                opacity: 0;
                transition: opacity 0.6s ease-in-out, top 0.6s ease-in-out;
                z-index: 1;
                display: flex;
                align-items: center;
                justify-content: center;
                .icon {
                  width: 15px;
                  height: 15px;
                  font-size: 1rem;
                  color: var(--composer-html-background);
                }
              }
            }
  
            &:hover {
              .image {
                transform: scale(1.1);
                transition: transform 1s ease-in-out;
              }
              .icon-wrapper{
                opacity: 1;
                top: 50%;
              }
            }
          }
          .gallery-item:hover .overlay {
            opacity: 0.5;
            pointer-events: all;
          }
        }
        .button-wrapper{
          display: flex;
          align-items: center;
          .button{
            .button-text{
              content: "";
            }
          }
        }
        .modal {
          .modal-wrapper{
            width: 90%;
            height: 90%;
            display: flex;
            justify-content: center;
            align-items: center;
            .modal-content {
              max-width: 90%;
              max-height: 90%;
              position: relative;
              .close {
                position: absolute;
                color: white;
                user-select: none;
                cursor: pointer;
                z-index: 10;
                .icon{
                  font-size: 1.5rem;
                }
              }
              .close {
                font-size: 1rem;
                top: 10px;
                right: 10px;
              }
            }
          }
        
          .prev,
          .next {
            position: absolute;
            color: white;
            user-select: none;
            cursor: pointer;
            z-index: 20;
            .icon{
              width: 40px;
              height: 40px;
              font-size: 1rem;
            }
          }
          .prev {
            left:50px;
            top: 50%;
            transform: translateY(-50%);
          }
          .next {
            right: 50px;
            top: 50%;
            transform: translateY(-50%);
          }

        }
        .image-container {
          width: 100%;
          height: 100%;
          aspect-ratio: 4 / 3;
          overflow: hidden;
          border-radius: var(--composer-border-radius-xs);
          .modal-image {
            object-fit: cover;
            width: 600px;
            height: 450px;
            max-width: 600px;
            max-height: 450px;
          }
        }
        .image-info {
          position: absolute;
          display: flex;
          justify-content: space-between;
          color: white;
          width: 100%;
          padding: var(--composer-gap-xs) 0px;
    
          .image-title {
            text-align: left;
            width: 50%;
            overflow-wrap: break-word;
          }
    
          .image-count {
            text-align: end;
            width: 50%;
          }
        }
    }
  }
  
  @container (max-width: #{$composer-tablet-width}) {
    .container {
      .max-content {
        .gallery-container{
          .gallery-item{
            .image-container {
              .icon-wrapper {
                .icon{
                  width: 15px;
                  height: 15px;
                }
              }
              .modal-image {
                min-width: 500px;
                min-height: 500px;
                max-width: 500px;
                max-height: 500px;
              }
            }
          }
        }
        .modal{
          .modal-wrapper{
            width: 100%;
            height: 100%;
            .modal-content {
              .close {
                .icon{
                  width: 30px;
                  height: 30px;
                }
              }
            }
          }
          .prev,
          .next{
            .icon{
              width: 30px;
              height: 30px;
            }
          }
          .prev {
            left:40px;
          }
          .next {
            right:40px;
          }
        }
      }
    }
  }
  
  @container (max-width: #{$composer-phone-width}) {
    .container {
      .max-content {
        gap: var(--composer-gap-lg);
        .tab-container {
          flex-direction: column;
          gap: var(--composer-gap-sm);
          .tab{
            text-align: center;
          }
        }
        .gallery-container {
          .gallery-item{
            .image-container{
              min-width: 325px;
            }
          }
        }
        .modal{
          .modal-content{
            .close {
              font-size: 1.5rem ;
              padding: var(--composer-gap-xs);
            } 
            .image-container{
              .modal-image{
                min-width: 325px;
                min-height: 100%;
                max-width: 100%;
                max-height: 100%;
              }
            }
          }
          .prev,
          .next{
            .icon{
              width: 20px;
              height: 20px;
            }
          }
          .prev {
            left:20px;
          }
          .next {
            right:20px;
          }
        }
      }
    }
  }

