fix: button alignemnt

--- a/editor-components/Image_gallery/image_gallery_2/image-gallery2.module.scss
+++ b/editor-components/Image_gallery/image_gallery_2/image-gallery2.module.scss
@@ -101,6 +101,7 @@
         .button-wrapper{
           display: flex;
           align-items: center;
+          justify-content: center;
           .button{
             .button-text{
               content: "";
